xine-engine: pre-amp for the equalizer works now.

BUG: 104882


svn path=/trunk/extragear/multimedia/amarok/; revision=431546